--- a/src/main/resources/static/css/trender.css
+++ b/src/main/resources/static/css/trender.css
@@ -43,15 +43,25 @@ body {
 
 #contentContainer {
     width: 90%;
+    max-width: 100%; /* Ensures it doesn't exceed the viewport width */
     align-self: center;
     margin: auto;
     background: white;
     padding: 35px;
     border-radius: 35px;
+    overflow-x: auto; /* Enables horizontal scrolling if needed */
 }
 
 #trendTableContainer {
     margin: 0 auto;
+    width: 100%;
+    table-layout: fixed;
+}
+
+#archiveTable {
+    margin: 0 auto;
+    width: 100%;
+    table-layout: fixed;
 }
 
 #graphContainer {
@@ -79,6 +89,17 @@ body {
 a {
     font-family: "Roboto Light";
     color: inherit;
+}
+
+.vdistinput {
+    border: 2px solid #2E2E2E; /* Border with the same color as the text */
+    border-radius: 10px; /* Adjust the value to change the roundness */
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    color: #2E2E2E; /* Set the font color */
+    padding: 8px 12px; /* Add padding for better appearance */
+    background-color: transparent; /* Remove background color */
+    appearance: none; /* Remove default styles for some browsers */
 }
 
 select {
