--- a/src/main/resources/static/css/trender.css
+++ b/src/main/resources/static/css/trender.css
@@ -9,47 +9,44 @@ body {
     position: sticky;
     top: 0;
     width: 100%;
-    height: 100px; /* Adjust the height as needed */
+    height: 100px;
     background: #2E2E2E;
-    border-bottom: 1px solid #ccc; /* Add a border at the bottom of the menu */
+    border-bottom: 1px solid #ccc;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 100;
-    margin-bottom: 25px;/* Ensure the menu stays above other elements */
+    margin-bottom: 25px;
 }
 
 .menu-logo {
-    width: auto; /* Set the width of the image container */
-    height: 100px; /* Set the height of the image container to match the menu */
-    position: absolute; /* Position the container absolutely within the menu */
-    left: 10px; /* Adjust the left position to fit your design */
+    width: auto;
+    height: 100px;
+    position: absolute;
+    left: 10px;
 }
 
-/* Image styles */
 .menu-logo img {
-    max-width: 100%; /* Ensure the image doesn't stretch beyond its original size */
-    max-height: 100%; /* Ensure the image doesn't stretch beyond its original size */
+    max-width: 100%;
+    max-height: 100%;
 }
 
-/* Centered text */
 .menu-text {
-    font-size: 24px; /* Set your desired font size */
+    font-size: 24px;
     color: yellow;
     font-weight: bolder;
     font-style: italic;
-    /* Set your desired text color */
 }
 
 #contentContainer {
     width: 90%;
-    max-width: 100%; /* Ensures it doesn't exceed the viewport width */
+    max-width: 100%;
     align-self: center;
     margin: auto;
     background: white;
     padding: 35px;
     border-radius: 35px;
-    overflow-x: auto; /* Enables horizontal scrolling if needed */
+    overflow-x: auto;
 }
 
 #trendTableContainer {
@@ -92,57 +89,56 @@ a {
 }
 
 .vdistinput {
-    border: 2px solid #2E2E2E; /* Border with the same color as the text */
-    border-radius: 10px; /* Adjust the value to change the roundness */
+    border: 2px solid #2E2E2E;
+    border-radius: 10px;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: #2E2E2E; /* Set the font color */
-    padding: 8px 12px; /* Add padding for better appearance */
-    background-color: transparent; /* Remove background color */
-    appearance: none; /* Remove default styles for some browsers */
+    color: #2E2E2E;
+    padding: 8px 12px;
+    background-color: transparent;
+    appearance: none;
+    width: 250px;
 }
 
 select {
-    border: 2px solid #2E2E2E; /* Border with the same color as the text */
-    border-radius: 10px; /* Adjust the value to change the roundness */
+    border: 2px solid #2E2E2E;
+    border-radius: 10px;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: #2E2E2E; /* Set the font color to blue */
-    padding: 8px 30px 8px 12px; /* Add padding for better appearance */
-    background-color: transparent; /* Remove background color */
-    background-image: none; /* Remove any default background images */
-    background-position: right center; /* Position the background image to the right center */
-    background-repeat: no-repeat; /* Prevent the background image from repeating */
-    appearance: none; /* Remove default styles for some browsers */
+    color: #2E2E2E;
+    padding: 8px 30px 8px 12px;
+    background-color: transparent;
+    background-image: none;
+    background-position: right center;
+    background-repeat: no-repeat;
+    appearance: none;
 }
 
-/* Styling for the dropdown arrow */
 select::-ms-expand {
-    display: none; /* Remove the arrow for IE/Edge */
+    display: none;
 }
 
 select::after {
-    content: "\f078"; /* Unicode for the down-arrow icon (FontAwesome's arrow-down) */
-    font-family: "FontAwesome"; /* Use FontAwesome for the icon */
+    content: "\f078";
+    font-family: "FontAwesome";
     position: absolute;
     right: 10px;
     top: 50%;
     transform: translateY(-50%);
-    pointer-events: none; /* Prevent clicking on the pseudo-element */
+    pointer-events: none;
 }
 
 button {
-    border: 2px solid #2E2E2E; /* Border with the same color as the text */
-    border-radius: 10px; /* Adjust the value to change the roundness */
+    border: 2px solid #2E2E2E;
+    border-radius: 10px;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: white; /* Set the font color to white */
-    padding: 8px 30px; /* Add padding for better appearance */
-    background-color: #2E2E2E; /* Set the background color to blue */
-    cursor: pointer; /* Add a cursor pointer on hover to indicate interactivity */
+    color: white;
+    padding: 8px 30px;
+    background-color: #2E2E2E;
+    cursor: pointer;
 }
 
-/* Style the tab container */
 div.tab {
     overflow: hidden;
 }
@@ -150,36 +146,33 @@ div.tab {
 .tab button.tablinks {
     background-color: transparent !important;
     color: black;
-    float: left; /* Position buttons side by side */
+    float: left;
     border-color: black;
     border-radius: 0px;
-    outline: none; /* Remove outline */
-    cursor: pointer; /* Add pointer on hover */
-    padding: 10px 15px; /* Add some padding */
-    transition: 0.3s; /* Add transition for hover effects */
-    font-size: 16px; /* Set font size */
+    outline: none;
+    cursor: pointer;
+    padding: 10px 15px;
+    transition: 0.3s;
+    font-size: 16px;
     margin: 10px;
 }
 
-/* Change background color of tablinks on hover */
 div.tab button.tablinks:hover {
-    background-color: #ddd; /* Light grey background on hover */
+    background-color: #ddd;
 }
 
-/* Create an active/current tablink class */
 div.tab button.tablinks.active {
-    background-color: darkgray; /* Different background color for the active tab */
+    background-color: darkgray;
 }
 
 .trender-menu-link {
     font-size: 24px;
     margin: 15px;
-    color: white; /* Sets the font color to white */
-    transition: font-size 0.3s ease; /* Smooth transition for font-size */
+    color: white;
+    transition: font-size 0.3s ease;
     text-decoration: none;
 }
 
 .trender-menu-link:hover {
-    font-size: 26px; /* Increases the font size when hovered */
+    font-size: 26px;
 }
-
